Fix for (Open)JDK 10